# rvllm

.github/workflows/: ci.yml
v3/: Cargo.toml
v3/crates/rvllm-apple/: Cargo.toml  build.rs
v3/crates/rvllm-apple-ane-sys/: Cargo.toml  build.rs
v3/crates/rvllm-apple-ane-sys/src/: ffi.rs  lib.rs  objc.rs  unavailable.rs
v3/crates/rvllm-apple-ane-sys/tests/: smoke.rs
v3/crates/rvllm-apple-coreml-sys/: Cargo.toml
v3/crates/rvllm-apple-coreml-sys/src/: core_ml.specification.core_ml_models.rs  core_ml.specification.mil_spec.rs  core_ml.specification.rs  lib.rs
v3/crates/rvllm-apple-metal/: Cargo.toml
v3/crates/rvllm-apple-metal/src/: arena.rs  context.rs  gemma4_model.rs  kernels.rs  layer_forward.rs  lib.rs  pipeline.rs  unavailable.rs  weight_loader.rs
v3/crates/rvllm-apple/build_support/: metallib.rs
v3/crates/rvllm-apple/metal/: prefill.metal
v3/crates/rvllm-apple/src/: ane.rs  backend.rs  compile_cache.rs  device.rs  disaggregated.rs  handoff.rs  iosurface.rs  lib.rs  metal.rs  mil.rs  mlx.rs  plan.rs  profiling.rs  weight_blob.rs
v3/crates/rvllm-apple/templates/: ffn.mlmodel  proj.mlmodel  qkv.mlmodel
v3/crates/rvllm-apple/tests/: ane_hardware_smokes.rs  ci_plan.rs  docs_risk.rs  metal_context.rs  metallib_build.rs  mlx_reference.rs
v3/crates/rvllm-attention/src/: decode.rs  lib.rs  prefill.rs
v3/crates/rvllm-bench/: Cargo.toml
v3/crates/rvllm-bench/src/: ane_meta.rs  harness.rs  lib.rs  main.rs  schema.rs
v3/crates/rvllm-bench/tests/: energy_schema.rs
v3/crates/rvllm-core/src/: error.rs  ids.rs  lib.rs
v3/crates/rvllm-core/src/config/: builder.rs  mod.rs  model.rs  runtime.rs
v3/crates/rvllm-core/tests/: apple_error.rs
v3/crates/rvllm-cutlass/src/: lib_so.rs
v3/crates/rvllm-deploy/: Cargo.toml
v3/crates/rvllm-deploy/src/: apple_offgrid.rs  lib.rs
v3/crates/rvllm-deploy/tests/: apple_offgrid_manifest.rs
v3/crates/rvllm-invariants/tests/: apple_ane_sys.rs  apple_docs.rs  dag.rs
v3/crates/rvllm-loader/src/: gemma4_arch.rs  gemma4_load.rs  gemma4_validate.rs  lib.rs  load.rs  load_multiformat.rs  safetensors.rs
v3/crates/rvllm-runtime/: Cargo.toml
v3/crates/rvllm-runtime/src/: apple_bridge.rs  apple_gemma4_metal.rs  apple_metal_backend.rs  apple_metal_backend_tests.rs  engine.rs  gemma4_bring_up.rs  gemma4_layer_exec.rs  layer_exec.rs  lib.rs  scheduler.rs
v3/crates/rvllm-serve/: Cargo.toml
v3/crates/rvllm-serve/src/: lib.rs  main.rs
v3/scratch/: compile_model.swift  inspect_ane  inspect_ane.m  inspect_ane.swift  inspect_mil  inspect_mil.rs
v3/scratch/compiled_ios.mlmodelc/proj.mlmodelc/: model.mil
v3/scratch/compiled_proj.mlmodelc/: model.mil
v3/scratch/verbose_compiled.mlmodelc/proj.mlmodelc/: metadata.json
v3/scripts/: check_generated_tiny_reference_bundle.sh  compare_generated_tiny_reference_torch.py  dump_gemma4_e2b_hf_reference_suite.py  dump_gemma4_hf_layer_trace.py  dump_gemma4_hf_reference_logits.py  run_e2b_metal_profile_samples.py  verify_generated_tiny_reference.py
v3/specs/: 17-apple.md  apple-backend-capability-ledger.md  apple-generated-tiny-reference-export.md  gemma4-hf-reference-logits.md
v3/tools/: apple_profile_gate.py  apple_profile_gate_selftest.py
