[package]
name = "rvllm-apple"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-apple: safe, host-testable Apple Silicon backend contracts.
#
# No private-framework FFI lives in this crate. Direct Objective-C/IOSurface
# access lives in `rvllm-apple-ane-sys` and should be consumed through safe
# wrappers behind explicit macOS/aarch64/private-ane cfg gates.

[features]
default = []
metal = ["dep:metal-rs"]
mlx = []
private-ane = []

[dependencies]
rvllm-core = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
metal-rs = { package = "metal", version = "0.31", optional = true }
