[package]
name = "rvllm-apple"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-apple: safe, host-testable Apple Silicon backend contracts.
#
# No private-framework FFI lives in this crate. Direct Objective-C/IOSurface
# access should land in a future `rvllm-apple-ane-sys` crate and be consumed
# through safe wrappers behind explicit macOS/aarch64/private-ane cfg gates.

[features]
default = []
metal = []
mlx = []
private-ane = []

[dependencies]
rvllm-core = { workspace = true }
tracing = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
prost = "0.14"
rvllm-apple-coreml-sys = { path = "../rvllm-apple-coreml-sys" }

[target.'cfg(target_os = "macos")'.dependencies]
rvllm-apple-ane-sys = { path = "../rvllm-apple-ane-sys" }
objc2 = "0.6"
tempfile = "3"
